# llm-internals

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/tinygpt/: __init__.py  attention.py  block.py  config.py  ffn.py  norm.py  rope.py
tests/: conftest.py  test_attention.py  test_batch_dims.py  test_block.py  test_config.py  test_ffn.py  test_gradients.py  test_norm.py  test_pad_masking.py  test_rope.py
