[project]
name = "llm-internals"
version = "0.1.0"
description = "A decoder-only transformer built from scratch in PyTorch — RoPE, RMSNorm, LoRA, KV-cache."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.11.0",
]

[dependency-groups]
dev = [
    "mypy>=2.0.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tinygpt"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]